OW-PCA security is now a separate section

--- a/crypto2025/biblio.bib
+++ b/crypto2025/biblio.bib
@@ -106,6 +106,24 @@
 }
 
 
+@article{DBLP:journals/cacm/RivestSA78,
+  author       = {Ronald L. Rivest and
+                  Adi Shamir and
+                  Leonard M. Adleman},
+  title        = {A Method for Obtaining Digital Signatures and Public-Key Cryptosystems},
+  journal      = {Commun. {ACM}},
+  volume       = {21},
+  number       = {2},
+  pages        = {120--126},
+  year         = {1978},
+  url          = {https://doi.org/10.1145/359340.359342},
+  doi          = {10.1145/359340.359342},
+  timestamp    = {Fri, 24 Mar 2023 16:31:07 +0100},
+  biburl       = {https://dblp.org/rec/journals/cacm/RivestSA78.bib},
+  bibsource    = {dblp computer science bibliography, https://dblp.org}
+}
+
+
 @inproceedings{DBLP:conf/crypto/FujisakiO99,
   author       = {Eiichiro Fujisaki and
                   Tatsuaki Okamoto},
@@ -690,7 +708,7 @@
       url = {https://eprint.iacr.org/2019/948}
 }
 
-@misc{DBLP:conf/crypto/00010N20,
+@misc{DBLP:conf/crypto/GuoJN20,
       author = {Qian Guo and Thomas Johansson and Alexander Nilsson},
       title = {A key-recovery timing attack on post-quantum primitives using the Fujisaki-Okamoto transformation and its application on {FrodoKEM}},
       howpublished = {Cryptology {ePrint} Archive, Paper 2020/743},
@@ -955,4 +973,108 @@
   month       = {October},
   url         = {https://classic.mceliece.org/mceliece-spec-20221023.pdf},
   note        = {Accessed: 2025-01-29}
+}
+
+
+@inproceedings{DBLP:conf/eurocrypt/BaetuDHTV19,
+  author       = {Ciprian Baetu and
+                  F. Bet{\"{u}}l Durak and
+                  Lo{\"{\i}}s Huguenin{-}Dumittan and
+                  Abdullah Talayhan and
+                  Serge Vaudenay},
+  editor       = {Yuval Ishai and
+                  Vincent Rijmen},
+  title        = {Misuse Attacks on Post-quantum Cryptosystems},
+  booktitle    = {Advances in Cryptology - {EUROCRYPT} 2019 - 38th Annual International
+                  Conference on the Theory and Applications of Cryptographic Techniques,
+                  Darmstadt, Germany, May 19-23, 2019, Proceedings, Part {II}},
+  series       = {Lecture Notes in Computer Science},
+  volume       = {11477},
+  pages        = {747--776},
+  publisher    = {Springer},
+  year         = {2019},
+  url          = {https://doi.org/10.1007/978-3-030-17656-3\_26},
+  doi          = {10.1007/978-3-030-17656-3\_26},
+  timestamp    = {Tue, 14 May 2019 13:57:20 +0200},
+  biburl       = {https://dblp.org/rec/conf/eurocrypt/BaetuDHTV19.bib},
+  bibsource    = {dblp computer science bibliography, https://dblp.org}
+}
+
+
+
+@inproceedings{DBLP:conf/asiacrypt/XagawaIUTH21,
+  author       = {Keita Xagawa and
+                  Akira Ito and
+                  Rei Ueno and
+                  Junko Takahashi and
+                  Naofumi Homma},
+  editor       = {Mehdi Tibouchi and
+                  Huaxiong Wang},
+  title        = {Fault-Injection Attacks Against NIST's Post-Quantum Cryptography Round
+                  3 {KEM} Candidates},
+  booktitle    = {Advances in Cryptology - {ASIACRYPT} 2021 - 27th International Conference
+                  on the Theory and Application of Cryptology and Information Security,
+                  Singapore, December 6-10, 2021, Proceedings, Part {II}},
+  series       = {Lecture Notes in Computer Science},
+  volume       = {13091},
+  pages        = {33--61},
+  publisher    = {Springer},
+  year         = {2021},
+  url          = {https://doi.org/10.1007/978-3-030-92075-3\_2},
+  doi          = {10.1007/978-3-030-92075-3\_2},
+  timestamp    = {Mon, 27 Jan 2025 20:19:57 +0100},
+  biburl       = {https://dblp.org/rec/conf/asiacrypt/XagawaIUTH21.bib},
+  bibsource    = {dblp computer science bibliography, https://dblp.org}
+}
+
+
+
+@inproceedings{DBLP:conf/pqcrypto/GuoM23,
+  author       = {Qian Guo and
+                  Erik M{\aa}rtensson},
+  editor       = {Thomas Johansson and
+                  Daniel Smith{-}Tone},
+  title        = {Do Not Bound to a Single Position: Near-Optimal Multi-positional Mismatch
+                  Attacks Against Kyber and Saber},
+  booktitle    = {Post-Quantum Cryptography - 14th International Workshop, PQCrypto
+                  2023, College Park, MD, USA, August 16-18, 2023, Proceedings},
+  series       = {Lecture Notes in Computer Science},
+  volume       = {14154},
+  pages        = {291--320},
+  publisher    = {Springer},
+  year         = {2023},
+  url          = {https://doi.org/10.1007/978-3-031-40003-2\_11},
+  doi          = {10.1007/978-3-031-40003-2\_11},
+  timestamp    = {Tue, 07 May 2024 20:05:10 +0200},
+  biburl       = {https://dblp.org/rec/conf/pqcrypto/GuoM23.bib},
+  bibsource    = {dblp computer science bibliography, https://dblp.org}
+}
+
+
+
+@inproceedings{DBLP:conf/isit/MisoczkiTSB13,
+  author       = {Rafael Misoczki and
+                  Jean{-}Pierre Tillich and
+                  Nicolas Sendrier and
+                  Paulo S. L. M. Barreto},
+  title        = {MDPC-McEliece: New McEliece variants from Moderate Density Parity-Check
+                  codes},
+  booktitle    = {Proceedings of the 2013 {IEEE} International Symposium on Information
+                  Theory, Istanbul, Turkey, July 7-12, 2013},
+  pages        = {2069--2073},
+  publisher    = {{IEEE}},
+  year         = {2013},
+  url          = {https://doi.org/10.1109/ISIT.2013.6620590},
+  doi          = {10.1109/ISIT.2013.6620590},
+  timestamp    = {Wed, 16 Oct 2019 14:14:48 +0200},
+  biburl       = {https://dblp.org/rec/conf/isit/MisoczkiTSB13.bib},
+  bibsource    = {dblp computer science bibliography, https://dblp.org}
+}
+
+@misc{cryptoeprint:2014/070,
+      author = {Chris Peikert},
+      title = {Lattice Cryptography for the Internet},
+      howpublished = {Cryptology {ePrint} Archive, Paper 2014/070},
+      year = {2014},
+      url = {https://eprint.iacr.org/2014/070}
 }
